[package]
name = "spfiler"
version = "0.1.0"
edition = "2021"


rustflags = ["-C", "target-feature=+crt-static"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "spfserv"
path = "src/serv.rs"

[[bin]]
name = "spfcli"
path = "src/cli.rs"

[dependencies]
axum = {version = "0.7.5", features = ["multipart"] }
reqwest = {version = "0.12.3", features = ["json", "multipart"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = [ "codec" ] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
